<resources>
    <string name="app_name">Personality Types</string>
    <string name="personality_types">Personality Types</string>
    <string name="about">About</string>
    <string name="logo_description">16 Personalities Logo</string>
    <string name="name">Tengku Romansyah</string>
    <string name="about_author_value">Tengku Romansyah is an undergraduate student at Institut Teknologi Bandung. He is pursuing undergraduate degree under Faculty of Industrial Technology. He decided to take course on industrial technology because of his interest on industrial scale-up and automation. Roman wants to be an engineer who brings better industrial sector in Indonesia, especially chemical industry.</string>
    <string name="about_app_value">This app is inspired by 16 Personalities. Most of resources is obtained from https://www.16personalities.com/</string>
    <string name="email_text">Email: tengku.romansyah@gmail.com</string>
    <string name="about_author_text">About Author</string>
    <string name="about_app_text">About App</string>
    <string name="contact_text">Contact</string>
    <string name="personality_type">Personality Type</string>
    <string name="personality_cover_description">Personality Cover Description</string>
    <string name="detail_description">Detail Description</string>
    <string name="detail_image_description">Detail personality image</string>
</resources>
